--- a/BCNN.ipynb
+++ b/BCNN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {
     "executionInfo": {
      "elapsed": 424,
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {
     "id": "-kXPgZYoXHoM"
    },
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
     "        return self.sigmoid(z) * (1 - self.sigmoid(z))\n",
     "\n",
     "    def cross_entropy_loss(self, y_true, y_pred):\n",
-    "        y_pred = np.clip(y_pred,1e-8,1-1e-8)\n",
+    "        y_pred = np.clip(y_pred, 1e-8, 1-1e-8)\n",
     "        return -np.mean(y_true * np.log(y_pred) + (1-y_true) * np.log(1-y_pred))\n",
     "\n",
     "    def forward(self, X):\n",
@@ -120,7 +120,7 @@
     "            db = np.sum(dz,axis = 0, keepdims = True)/m\n",
     "            self.deltas.append((dz,dw,db))\n",
     "\n",
-    "        dz = np.dot(self.deltas[-1][0], self.weights[-2].T) * self.derivative_sigmoid(self.linear_combinations[0])\n",
+    "        dz = np.dot(self.deltas[-1][0], self.weights[1].T) * self.derivative_sigmoid(self.linear_combinations[0])\n",
     "        dw = np.dot(X.T,dz)/m\n",
     "        db = np.sum(dz,axis = 0, keepdims = True)/m\n",
     "        self.deltas.append((dz,dw,db))\n",
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,43 +169,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0 - Loss: 0.6711\n",
-      "Epoch 100 - Loss: 0.6446\n",
-      "Epoch 200 - Loss: 0.5994\n",
-      "Epoch 300 - Loss: 0.5436\n",
-      "Epoch 400 - Loss: 0.4942\n",
-      "Epoch 500 - Loss: 0.4578\n",
-      "Epoch 600 - Loss: 0.4326\n",
-      "Epoch 700 - Loss: 0.4145\n",
-      "Epoch 800 - Loss: 0.4004\n",
-      "Epoch 900 - Loss: 0.3883\n",
-      "Epoch 1000 - Loss: 0.3779\n",
-      "Epoch 1100 - Loss: 0.3692\n",
-      "Epoch 1200 - Loss: 0.3618\n",
-      "Epoch 1300 - Loss: 0.3552\n",
-      "Epoch 1400 - Loss: 0.3493\n",
-      "Epoch 1500 - Loss: 0.3439\n",
-      "Epoch 1600 - Loss: 0.3389\n",
-      "Epoch 1700 - Loss: 0.3341\n",
-      "Epoch 1800 - Loss: 0.3297\n",
-      "Epoch 1900 - Loss: 0.3254\n",
-      "[[27  6]\n",
+      "Epoch 0 - Loss: 0.7002\n",
+      "Epoch 100 - Loss: 0.6345\n",
+      "Epoch 200 - Loss: 0.5770\n",
+      "Epoch 300 - Loss: 0.5107\n",
+      "Epoch 400 - Loss: 0.4557\n",
+      "Epoch 500 - Loss: 0.4175\n",
+      "Epoch 600 - Loss: 0.3908\n",
+      "Epoch 700 - Loss: 0.3708\n",
+      "Epoch 800 - Loss: 0.3553\n",
+      "Epoch 900 - Loss: 0.3434\n",
+      "Epoch 1000 - Loss: 0.3337\n",
+      "Epoch 1100 - Loss: 0.3255\n",
+      "Epoch 1200 - Loss: 0.3178\n",
+      "Epoch 1300 - Loss: 0.3103\n",
+      "Epoch 1400 - Loss: 0.3027\n",
+      "Epoch 1500 - Loss: 0.2947\n",
+      "Epoch 1600 - Loss: 0.2864\n",
+      "Epoch 1700 - Loss: 0.2782\n",
+      "Epoch 1800 - Loss: 0.2702\n",
+      "Epoch 1900 - Loss: 0.2626\n",
+      "[[29  4]\n",
       " [ 2 26]]\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.93      0.82      0.87        33\n",
-      "           1       0.81      0.93      0.87        28\n",
+      "           0       0.94      0.88      0.91        33\n",
+      "           1       0.87      0.93      0.90        28\n",
       "\n",
-      "    accuracy                           0.87        61\n",
-      "   macro avg       0.87      0.87      0.87        61\n",
-      "weighted avg       0.88      0.87      0.87        61\n",
+      "    accuracy                           0.90        61\n",
+      "   macro avg       0.90      0.90      0.90        61\n",
+      "weighted avg       0.90      0.90      0.90        61\n",
       "\n"
      ]
     }
@@ -217,10 +217,10 @@
     "X_train_scaled = scaler.fit_transform(X_train)\n",
     "X_test_scaled = scaler.transform(X_test)\n",
     "\n",
-    "nn2 = BCNN(layers = [6,4],epochs = 2000, verbose = True, learning_rate=0.1)\n",
-    "nn2.fit(X_train_scaled, y_train)\n",
+    "bcnn = BCNN(layers = [10,7,4],epochs = 2000, verbose = True, learning_rate=0.1)\n",
+    "bcnn.fit(X_train_scaled, y_train)\n",
     "\n",
-    "y_pred = nn.predict(X_test_scaled)\n",
+    "y_pred = bcnn.predict(X_test_scaled)\n",
     "print(confusion_matrix(y_test, y_pred))\n",
     "print(classification_report(y_test, y_pred))"
    ]
