--- a/BCNN.ipynb
+++ b/BCNN.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,12 +97,9 @@
     "        self.linear_combinations.append(np.dot(X, self.weights[0]) + self.biases[0])\n",
     "        self.activations.append(self.sigmoid(self.linear_combinations[0]))\n",
     "        \n",
-    "        for i in range(len(self.layers)-1):\n",
+    "        for i in range(len(self.layers)):\n",
     "            self.linear_combinations.append(np.dot(self.activations[i], self.weights[i+1]) + self.biases[i+1])\n",
     "            self.activations.append(self.sigmoid(self.linear_combinations[i+1]))\n",
-    "\n",
-    "        self.linear_combinations.append(np.dot(self.activations[-1], self.weights[-1]) + self.biases[-1])\n",
-    "        self.activations.append(self.sigmoid(self.linear_combinations[-1]))\n",
     "\n",
     "        return self.activations[-1]\n",
     "\n",
@@ -159,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
